Fix screenshot alignment

--- a/css/main.css
+++ b/css/main.css
@@ -21,20 +21,31 @@ header {
   padding: 0 1rem;
   background-color: #e2e2e2;
   flex-wrap: nowrap;
+  margin: 0 auto;
 }
 
 header h1 {
- flex-grow: 2;
+  flex-grow: 2;
+  padding-left: .5rem;
 }
 
 header p {
-  font-size: 1.125rem;
+  flex-grow: 2;
+  margin-left: -4.1rem;
 }
 
 nav ul {
   list-style-type: none;
   padding: 0;
   display: flex;
+  flex-grow: 2;
+  margin-left: -4rem;
+}
+
+nav li {
+  display: inline;
+  padding: .75em 1em .6em;
+  font-size: 1.125rem;
 }
 
 nav a {
@@ -42,12 +53,12 @@ nav a {
   color: #0074d9;
 }
 
-ul li {
-  padding: 0;
+nav a:hover {
+  background-color: #e2e2e2;
+  border-color: #e2e2e2;
 }
 
 header img {
   width: 2rem;
   order: -1;
-  flex-shrink: 2;
 }
